# ironhack-final-project

./: README.md  presentation.html  presentation.md  pyproject.toml  run_pipeline.py
data/raw/: asn_data.csv  connectivity_data.csv  neighbour_data.csv
models/: logistic_regression.pkl  random_forest.pkl  unsupervised_autoencoder.keras
notebooks/: data_preprocessing.ipynb  ml_modeling.ipynb
scripts/: compare_results.py  generate_censorship_event_visualizations.py  generate_corrected_visualizations.py  generate_unsupervised_event_visualizations.py  run_data_preprocessing.py  run_ml_modeling.py  run_unsupervised_ml.py
